--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.12.1",
+    "@oxc-minify/binding-darwin-arm64": "^0.105.0",
+    "@oxc-parser/binding-darwin-arm64": "^0.105.0",
+    "@oxc-transform/binding-darwin-arm64": "^0.105.0",
     "eslint": "^9.39.2",
     "typescript": "^5.9.3",
-    "vue-tsc": "^3.2.1"
+    "vue-tsc": "^3.2.1",
+    "zod": "^3",
+    "zod-to-json-schema": "^3.25.0"
   },
-  "packageManager": "pnpm@10.26.1"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
