feat: project page

--- a/content/projects.yml
+++ b/content/projects.yml
@@ -1,5 +1,5 @@
-title: Designing Interfaces, Building Experiences.
-description: I've worked on a variety of projects, focusing on creating intuitive digital experiences where thoughtful design meets clean code. Here are some highlights I'm proud of, showcasing my process from concept to execution.
+title: Building Products, Solving Problems.
+description: 精選幾個代表性專案，展示從問題分析到技術實現的完整過程。
 links:
   - label: "Let's talk"
     color: "neutral"
