--- a/content/projects.yml
+++ b/content/projects.yml
@@ -1,5 +1,5 @@
 title: Building Products, Solving Problems.
-description: 精選幾個代表性專案，展示從問題分析到技術實現的完整過程。
+description: 精選幾個代表性專案，展示技術選型到產品落地的實踐過程。
 links:
   - label: "Let's talk"
     color: "neutral"
