feat: opt blog structure

--- a/content/blog.yml
+++ b/content/blog.yml
@@ -1,2 +1,2 @@
 title: Latest Articles
-description: Some of my recent thoughts on design, development, and the tech industry.
+description: 技術筆記、解題思路、偶爾的胡思亂想。
