--- a/content/index.yml
+++ b/content/index.yml
@@ -121,7 +121,7 @@ testimonials:
         srcset: 'https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=80&h=80&q=80 2x'
 blog:
   title: "Latest Articles"
-  description: "Some of my recent thoughts"
+  description: "技術筆記、解題思路、偶爾的胡思亂想。"
 faq:
   title: Frequently Asked Questions
   description: Answers to common questions about my process and services.
