feat: optimize SEO settings, OG image, and robots.txt

--- a/content/about.yml
+++ b/content/about.yml
@@ -1,5 +1,5 @@
 title: About Me
-description: 我是 Frank，一名專注於將複雜問題轉化為直觀產品的開發者。
+description: 我是 Frank Liao，一名專注於將複雜問題轉化為直觀產品的開發者。
 content: |
   > **在數位產品開發的領域中，我認為技術的價值在於能多精準地處理那些「不效率」。**
 
@@ -21,7 +21,7 @@ content: |
 
   開發之餘，我喜歡觀察身邊各種系統與細節的運作邏輯。無論是咖啡店的動線規劃，還是生活中的各種小細節，這些日常中的 **「運作模式」** 常能給我不同的啟發。
   我也喜歡隨手拍下生活中的小確幸或有意思的瞬間。對我來說，觀察世界的過程，能讓我換個視角思考問題，在快節奏的開發生活中保持平衡。
-  
+
   感謝你的造訪。你可以看看我的 [精選作品](/projects)，或是直接 [聯絡我](/#contact) 聊聊你的想法！
 
 images:
