--- a/content/index.yml
+++ b/content/index.yml
@@ -1,6 +1,6 @@
 seo:
   title: "Frank Liao - Full-stack Engineer"
-  description: "Full-stack engineer, specializing in web development, AI integration, and building products from concept to production."
+  description: "Specializing in web development, AI integration, and building products from concept to production."
 title: "Hey, I'm Frank Liao\nFull-stack Engineer"
 description: "Turning complex problems into intelligent solutions."
 hero:
