chore: update index page title

--- a/content/index.yml
+++ b/content/index.yml
@@ -1,5 +1,5 @@
 seo:
-  title: "Frank Liao - Full-stack Engineer"
+  title: "Full-stack Engineer"
   description: "Specializing in web development, AI integration, and building products from concept to production."
 title: "Hey, I'm Frank Liao\nFull-stack Engineer"
 description: "Turning complex problems into intelligent solutions."
