--- a/content/projects.yml
+++ b/content/projects.yml
@@ -2,5 +2,5 @@ title: Building Products, Solving Problems.
 description: 精選幾個代表性專案，展示技術選型到產品落地的實踐過程。
 links:
   - label: "Let's talk"
-    color: "neutral"
+    color: 'neutral'
   - label: 'Email me'
