--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
+    "@barzhsieh/nuxt-content-mermaid": "^2.1.3",
+    "@excalidraw/excalidraw": "^0.18.0",
+    "@excalidraw/mermaid-to-excalidraw": "^2.0.0",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/simple-icons": "^1.2.63",
     "@nuxt/content": "^3.9.0",
@@ -21,10 +24,16 @@
     "@nuxtjs/seo": "3.3.0",
     "@vueuse/nuxt": "^14.1.0",
     "better-sqlite3": "^12.5.0",
+    "dayjs": "^1.11.19",
+    "eslint-config-prettier": "^10.1.8",
+    "mermaid": "^11.12.2",
     "motion-v": "^1.7.3",
     "nuxt": "^4.2.2",
     "nuxt-og-image": "^5.1.13",
-    "nuxt-studio": "1.0.0-beta.3"
+    "nuxt-studio": "1.0.0-beta.3",
+    "prettier": "^3.7.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.12.1",
