--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@barzhsieh/nuxt-content-mermaid": "^2.1.3",
     "@excalidraw/excalidraw": "^0.18.0",
     "@excalidraw/mermaid-to-excalidraw": "^2.0.0",
     "@iconify-json/lucide": "^1.2.82",
@@ -37,9 +36,12 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.12.1",
+    "@types/node": "^25.0.3",
     "eslint": "^9.39.2",
     "nuxt-gtag": "^4.1.0",
+    "sass": "^1.97.1",
     "typescript": "^5.9.3",
+    "vite": "^7.3.0",
     "vue-tsc": "^3.2.1",
     "zod": "^3",
     "zod-to-json-schema": "^3.25.0"
